fix(*): return the sequence
