# swagger/swagger.json
@@ -76,11 +76,14 @@
     "definitions": {
         "Sequence": {
             "required": [
-                "n"
+                "sequence"
             ],
             "properties": {
-                "n": {
-                    "type": "string"
+                "sequence": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
